src/test/deca/context/invalid/pierre/objects/newUndefined.deca
class A {
    void test() {
        A a = new B();
    }
}
{}